# pinky_pro

./: README.md
aruco_node/: package.xml  setup.cfg  setup.py
aruco_node/aruco_node/: __init__.py  aruco_marker_pose_node.py
aruco_node/config/: aruco_marker_pose_node.yaml  calibration_matrix.npy  distortion_coefficients.npy
aruco_node/launch/: aruco_marker_pose_node.launch.xml
aruco_node/resource/: aruco_node
pinky_bringup/: setup.py
pinky_bringup/config/: pinky_controllers.yaml  pinky_params.yaml  robot_config.yaml
pinky_bringup/launch/: bringup_robot.launch.py  bringup_robot.launch.xml  brinup.launch.xml  chore: rename brinup.launch.xml to brinup_robot.launch.xml
pinky_bringup/pinky_bringup/: battery_publisher.py  bringup.py
pinky_description/launch/: upload_robot.launch.py
pinky_description/urdf/: pinky.urdf.xacro  pinky_gz.urdf.xacro  robot.urdf.xacro
pinky_docking_plugins/: CMakeLists.txt  package.xml  plugins.xml
pinky_docking_plugins/include/pinky_docking_plugins/: april_dock.hpp  pose_filter.hpp
pinky_docking_plugins/src/: april_dock.cpp  pose_filter.cpp
pinky_emotion/pinky_emotion/: emotion_server.py  pinky_emotion.py  pinky_lcd.py
pinky_gz_sim/: CMakeLists.txt
pinky_gz_sim/launch/: spawn.launch.xml
pinky_gz_sim/worlds/: pinky_factory.world
pinky_interfaces/: CMakeLists.txt
pinky_led/pinky_led/: led_server.py  pinkyled.py
pinky_navigation/: package.xml
pinky_navigation/launch/: bringup_launch.py  bringup_launch.xml  localization_launch.py  localization_launch.xml  multi_nav2_view.launch.xml  nav2_view.launch.xml  navigation_launch.py  navigation_launch.xml  web_nav2.launch.xml  web_slam.launch.xml
pinky_navigation/map/: Final_map.pgm  Final_map.yaml  fullmap2_modified.pgm  fullmap2_modified.yaml
pinky_navigation/params/: mapper_params.yaml  nav2_params.yaml  nav2_params_multi.yaml
pinky_navigation/rviz/: multi_nav2_view.rviz  nav2_view.rviz
pinky_navigation/scripts/: nav2_web_server.py
pinky_rtr/: package.xml  setup.cfg  setup.py
pinky_rtr/launch/: drive.launch.py  localization_launch.py  nav2_view.launch.xml
pinky_rtr/pinky_rtr/: amcl_publisher.py  drive.py  vel_smoother.py
